[package]
name = "frcLogLens"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_frc_log_lens"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
ordered-float = "3.7.0"
pyo3 = "0.19.0"
