[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "frcLogLens"
version = "0.0.12"
maintainers = [
  {name = "Thomas Anderson", email = "tande92834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Team997Coders/frclogLens"
# Documentation = "" TODO
Repository = "https://github.com/Team997Coders/frclogLens.git"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src/py"